--- a/concepts/core-architecture/test-discovery-lifecycle.mdx
+++ b/concepts/core-architecture/test-discovery-lifecycle.mdx
@@ -1,271 +1,168 @@
 ---
-title: "Test Discovery & Execution Lifecycle"
-description: "Understand how GoogleTest automatically discovers, initializes, and executes tests, including setup, teardown, and reporting mechanics. Learn how test suites and test cases are registered and run, and the flow from test entry point to result output."
+title: "Test Discovery and Execution Lifecycle"
+description: "Explains how GoogleTest automatically discovers and executes tests. Describes registration macros, suites, test main functions, and the orchestration flow—enabling users to scale from simple to complex test sets without manual management."
 ---
 
-# Test Discovery & Execution Lifecycle
+# Test Discovery and Execution Lifecycle
 
-Understand how GoogleTest automatically discovers, initializes, and executes tests, including setup, teardown, and reporting mechanics. Learn how test suites and test cases are registered and run, and the flow from test entry point to result output.
+GoogleTest is designed to automatically discover and execute tests within your test program. This seamless flow frees you from manual test registration, enabling you to scale from simple single-test projects to highly complex test suites without any extra management overhead.
+
+This guide explains how GoogleTest discovers tests, the role of registration macros and test suites, and how the test execution orchestration works internally to help you write effective and scalable test programs.
 
 ---
 
-## Introduction
+## How GoogleTest Discovers Tests
 
-When you run your GoogleTest-based test program, the framework handles the entire lifecycle of test discovery, initialization, execution, and report generation without requiring any manual enumeration of tests. This seamless orchestration ensures that all your defined tests run in a controlled, predictable manner, providing immediate feedback and detailed results.
+At the heart of GoogleTest’s power is its automatic test discovery mechanism. When you write tests using macros like `TEST()`, `TEST_F()`, or `TEST_P()`, you don’t need to manually register them. Instead, the macros cause your tests to be registered globally, in a way GoogleTest collects before any tests run.
 
-This page explains the key concepts involved in the test discovery and execution process, explaining how test suites and test cases are registered, how setup and teardown happen, and how the execution flows from the `main()` entry point to the final test output.
+The key points:
 
-## How GoogleTest Discovers Tests Automatically
+- **Registration Macros**: Each test macro expands to code that creates a `TestInfo` object describing the test.
+- **Global Registry**: These `TestInfo` objects are automatically added to the singleton `UnitTest` instance.
+- **Test Suites**: Related tests are grouped into test suites (`TestSuite`), identified by their suite name (e.g., `FactorialTest`).
 
-GoogleTest uses powerful **automatic test registration** to keep track of all your defined tests and test suites.
+This design eliminates boilerplate and human error from manual enumeration of tests. You simply write your tests anywhere in the linked code, and GoogleTest finds them all at runtime.
 
-### Defining Tests
-
-- You define individual tests using the `TEST()` macro (or `TEST_F()` for fixtures).
-- Each test defines a test suite name and test name.
-- When these macros are compiled, they register the test metadata behind the scenes.
-
-### Test Registration
-
-- At program initialization, all registered tests are collected into a global registry.
-- This registry maintains the list of test suites and their associated test cases.
-
-This automatic registration means you never need to manually list or invoke your tests — simply linking your test files into a binary is sufficient.
-
-<Info>
-This automatic discovery is one of GoogleTest's core conveniences, ensuring seamless scalability as your project grows.
-</Info>
-
-## Test Program Entry and Initialization
-
-The typical test program starts execution at `main()`, which can be provided by you or automatically supplied through GoogleTest libraries like `gtest_main` or `gmock_main`.
-
-### Initialization Sequence
-
-1. **Initialize the Testing Framework**
-   - Call `testing::InitGoogleTest(&argc, argv)` to parse command-line flags relevant to GoogleTest.
-   - This handles test filtering, output format selection, catch-exit behavior, and other configuration.
-
-2. **Run Tests**
-   - Call `RUN_ALL_TESTS()` to execute all discovered tests.
-   - GoogleTest returns `0` if all tests pass, or `1` if any fail.
-
-### Example main() Boilerplate
+### Example: Defining Tests
 
 ```cpp
-#include <gtest/gtest.h>
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
 
-int main(int argc, char** argv) {
-  testing::InitGoogleTest(&argc, argv);  // Setup GoogleTest
-  return RUN_ALL_TESTS();                // Trigger test execution
+TEST_F(MyFixture, DoesSomething) {
+  EXPECT_TRUE(SomeFunction());
 }
 ```
 
-<Note>
-You should always check the return code of `RUN_ALL_TESTS()` as it indicates success or failure of your test suite.
-</Note>
+Each such test is registered immediately before `main()` is run. This registration uses internal macros and factory classes to record the test name, location, and fixture types.
 
-## Test Execution Flow
+## Registration Workflow and Core Macros
 
-Once the test program starts execution, GoogleTest runs each test case in the order determined by the registry, handling setup and teardown for each.
+Under the hood, GoogleTest uses the following mechanisms:
 
-### Running a Single Test
+- **`MakeAndRegisterTestInfo`:** This internal function creates a `TestInfo` instance for each test and registers it with the global `UnitTest` singleton.
+- **Factories:** Invocation of factories creates fresh test fixture instances for running the test body.
+- **Suite Setup/TearDown:** Suite-level setup and teardown callbacks (`SetUpTestSuite()` and `TearDownTestSuite()`) are associated per test fixture type.
 
-For each test case:
+The user-facing test macros implicitly call this registration, requiring no extra user action beyond writing test functions.
 
-1. **Create Test Fixture Object**
-   - GoogleTest instantiates the fixture class for the test (or a default if none).
+## Test Suites and Test Organization
 
-2. **Call Setup**
-   - Runs `SetUp()` method on the fixture.
-   - This prepares any shared state or resources needed for the test.
+Tests naturally group into **test suites** (previously called test cases). GoogleTest uses suites to:
 
-3. **Execute Test**
-   - Runs the test body defined by you within `TEST_F` or `TEST`.
+- Collect logically related tests, often sharing common fixture code.
+- Provide hooks for suite-level setup and teardown.
+- Enable filtering at the suite level via command-line flags.
 
-4. **Call Teardown**
-   - Runs `TearDown()` on the fixture to clean up.
+The suite name is the first parameter of `TEST()` or the fixture class name in `TEST_F()`.
 
-5. **Destroy Fixture Object**
+## How Tests Are Executed
 
-This lifecycle isolates each test case to ensure no side-effects propagate across test boundaries.
+Once `RUN_ALL_TESTS()` is called (usually in `main()`), the GoogleTest framework:
 
-<Warning>
-If initialization or teardown throws an error or crashes, the current test is aborted but the framework continues with other tests.
-</Warning>
+1. **Initializes Environments:** Calls `SetUp()` on all registered global environments (defined by subclassing `::testing::Environment`).
+2. **Filters Tests:** Using provided flags and environment variables, tests are filtered for execution.
+3. **Runs Test Iterations:** Test programs can run multiple iterations depending on the `--gtest_repeat` flag. For each iteration:
+   - Environments may be recreated based on `--gtest_recreate_environments_when_repeating`.
+   - Test suites are iterated over—suite setup hooks are invoked once before any tests in the suite run.
+   - Each test in the suite runs on its own fresh fixture instance:
+     - Fixture is constructed.
+     - `SetUp()` is called.
+     - `TestBody()` runs (the test logic).
+     - `TearDown()` is called.
+     - Fixture is destructed.
+   - Suite teardown hooks are called after all tests complete.
+4. **Environments are torn down** after all iterations finish.
+5. **Returns Status:** The overall test result is returned from `RUN_ALL_TESTS()`.
 
-### Parallelism and Ordering
+### Support for Parallelism and Sharding
 
-- By default, tests run sequentially. Some build systems can configure parallel execution but GoogleTest does not manage thread safety internally.
-- Respect test independence to avoid flaky results.
+GoogleTest supports advanced execution patterns, like sharding tests across multiple machines, via environment variables controlling which tests should run on which shard.
 
-## Setup and Teardown Mechanics
+### Event Listeners
 
-### Test Fixtures
+Throughout execution, GoogleTest fires event notifications (`OnTestStart()`, `OnTestEnd()`, etc.) to event listeners, allowing tools and custom reporters to track progress or modify output.
 
-- Fixtures are classes derived from `::testing::Test`.
-- You can override `SetUp()` and `TearDown()` to initialize and clean up state shared across tests in a suite.
-- Each test case gets a fresh fixture instance, ensuring isolation.
+## Practical Guidance for Users
 
-### Constructor and Destructor
-
-- GoogleTest constructs and destructs the fixture object around each test.
-- Use constructors if setup does not require failure handling; otherwise prefer `SetUp()` and `TearDown()`.
-
-<Check>
-Best practice is to keep `SetUp()` and `TearDown()` lightweight to maintain fast test execution.
-</Check>
-
-## Test Suites and Test Cases
-
-### Structure
-
-- A **test suite** groups multiple related individual tests.
-- Each **test case** is a discrete, runnable unit within a suite.
-
-This hierarchical organization makes it easier to understand and run specific subsets.
-
-### Registration
-
-- Both test suites and test cases are registered internally during static initialization.
-- Users interact primarily with individual or grouped tests through command-line flags or test filters.
-
-### Filtering Tests
-
-- Use `--gtest_filter=` to limit which tests run by suite or test name.
-- This enables faster feedback loops when working on specific areas of code.
-
-### Example
-
-```shell
-./my_test_binary --gtest_filter=MyTestSuite.MyTestCase
-```
-
-## Reporting and Result Output
-
-### Summary of Results
-
-After all tests run, GoogleTest prints a summary including:
-
-- Passed test count
-- Failed test count
-- Any tests skipped or disabled
-
-### Failure Messages
-
-- Detailed messages are printed for failed tests.
-- Includes file and line where the failure occurred, the expression that failed, and any custom messages.
-
-### Output Formats
-
-- Human-readable
-- XML format for integration with CI systems (`--gtest_output=xml:path/to/file.xml`)
-
-### Options for Verbosity
-
-- Customize output with flags for more or less detail.
-
-## Typical User Flow
-
-<Steps>
-<Step title="Write and Compile Tests">
-Define your tests with `TEST()` and `TEST_F()`, build your test binary linking GoogleTest.
-</Step>
-<Step title="Run Tests via CLI">
-Run your test binary to perform test discovery and execution automatically.
-</Step>
-<Step title="Interpret Results">
-Read detailed output to identify failures or errors and debug accordingly.
-</Step>
-<Step title="Rerun with Filters">
-Narrow the test set by using filters to work iteratively on fixes.
-</Step>
-</Steps>
-
-## Best Practices
-
-- **Ensure isolation:** Design tests so each can run independently without side effects.
-- **Use fixtures wisely:** Shared setup/teardown reduces boilerplate.
-- **Leverage test filtering:** Keep turnaround time short by selectively running tests.
-- **Check return codes:** Always use the return code of `RUN_ALL_TESTS()`.
-- **Use provided main():** Whenever possible, link with `gtest_main` or `gmock_main` to avoid boilerplate.
-
-## Troubleshooting Tips
-
-- **Tests not running?**
-  - Make sure tests are linked into the executable.
-  - Verify macros `TEST` or `TEST_F` are used correctly.
-- **Setup or teardown not called?**
-  - Check proper overrides of `SetUp()` and `TearDown()`, and spelling.
-- **Tests failing unexpectedly?**
-  - Consider setup side-effects or shared state not properly reset.
-- **Filtering not working?**
-  - Double-check filter syntax and test names (case-sensitive).
-
-## Related Concepts
-
-- Integration with Build Systems: [Guides / Integrating with Build Systems](https://github.com/google/googletest/tree/main/docs/guides/real-world-guidance/project-integration.md)
-- Test Assertions and Matchers: [Concepts / Assertions & Matchers](https://github.com/google/googletest/tree/main/docs/concepts/core-architecture/assertions-matchers.md)
-- Writing Your First Test: [Getting Started / Writing Your First Test](https://github.com/google/googletest/tree/main/docs/guides/getting-started/writing-your-first-test.md)
+- Writing tests with macros like `TEST()`, `TEST_F()`, and `TEST_P()` automatically registers them and includes them in discovery.
+- You do not need to manage test registration.
+- Use `RUN_ALL_TESTS()` in `main()` after `InitGoogleTest()` to execute all registered tests.
+- Use flags such as `--gtest_filter`, `--gtest_repeat`, and `--gtest_shuffle` to control execution scope, repetition, and order.
+- Understand the lifecycle hooks `SetUpTestSuite()` and `TearDownTestSuite()` for managing shared resources.
+- Add global environments via `AddGlobalTestEnvironment()` to perform setup/teardown for the whole test program.
 
 ---
 
-## Simplified Lifecycle Diagram
+## Visualization: GoogleTest Test Discovery and Execution Flow
 
 ```mermaid
 flowchart TD
-  Start([Test Program Start]) --> Init["InitGoogleTest() called"]
-  Init --> Discover["Discover Registered Tests"]
-  Discover -->|For each Test Suite| SuiteLoop["Test Suite Loop"]
-  subgraph SuiteLoop
-    direction TB
-    SuiteSetup["Create Fixture per Test"]
-    SuiteSetup --> Setup["Call SetUp()"]
-    Setup --> RunTest["Run Test Case"]
-    RunTest --> TearDown["Call TearDown()"]
-    TearDown --> DestroyFixture["Destroy Fixture"]
-    DestroyFixture --> SuiteNext["More Tests in Suite?"]
-    SuiteNext -->|Yes| SuiteSetup
-    SuiteNext -->|No| NextSuite["More Test Suites?"]
-  end
-  NextSuite -->|Yes| SuiteLoop
-  NextSuite -->|No| OutputResults["Output Test Summary and Results"]
-  OutputResults --> End([Program Exit])
+  InitGoogleTest["Call InitGoogleTest(argc, argv)"]
+  RegisterTests["Automatic Test Registration via TEST Macros"]
+  RunAllTests["Call RUN_ALL_TESTS()"]
+  SetupEnvironments["Global Environment::SetUp"]
+  FilterTests["Filter Tests based on Flags and Environment"]
+  TestIterations["Start Test Iterations (Repeat N times)"]
+  RecreateEnvs["Recreate Environments if required"]
+  ForEachSuite["For each Test Suite:"]
+  SuiteSetup["Call SetUpTestSuite()"]
+  ForEachTest["For each Test in Suite:"]
+  FixtureCreate["Create Test Fixture instance"]
+  FixtureSetUp["Call SetUp()"]
+  RunTestBody["Run TestBody()"]
+  FixtureTearDown["Call TearDown()"]
+  FixtureDestroy["Destroy Fixture instance"]
+  SuiteTearDown["Call TearDownTestSuite()"]
+  TearDownEnvironments["Global Environment::TearDown"]
+  ReturnStatus["Return Test Execution Status"]
 
-  classDef startend fill:#28a745,color:#fff,stroke:#19692c,stroke-width:2px;
-  class Start,End startend;
+  InitGoogleTest --> RegisterTests --> RunAllTests
+  RunAllTests --> SetupEnvironments --> FilterTests --> TestIterations
+  TestIterations --> RecreateEnvs --> ForEachSuite
+  ForEachSuite --> SuiteSetup --> ForEachTest
+  ForEachTest --> FixtureCreate --> FixtureSetUp --> RunTestBody --> FixtureTearDown --> FixtureDestroy
+  ForEachTest --> ForEachTest
+  SuiteSetup --> SuiteTearDown
+  ForEachSuite --> ForEachSuite
+  TestIterations --> TearDownEnvironments --> TestIterations
+  TestIterations --> ReturnStatus
 
-  classDef process fill:#007bff,color:#fff,stroke:#004085,stroke-width:1.5px;
-  class Init,Discover,SuiteSetup,Setup,RunTest,TearDown,DestroyFixture,OutputResults process;
-
-  classDef decision fill:#ffc107,color:#333,stroke:#ba7811,stroke-width:2px;
-  class SuiteNext,NextSuite decision;
+  classDef startend fill:#c5f3c5,stroke:#3a953a,stroke-width:2px,color:#065006
+  class InitGoogleTest,ReturnStatus startend;
 ```
 
 ---
 
-## Summary
+## Troubleshooting Tips
 
-GoogleTest's **test discovery and execution lifecycle** transparently manages your tests from registration through to result reporting. By defining tests with macros like `TEST` and `TEST_F`, your tests are automatically registered and invoked. Initialization with `InitGoogleTest` followed by execution via `RUN_ALL_TESTS()` drives the lifecycle, handling fixtures, setup, teardown, test invocation, and output with fine control.
+- Ensure `InitGoogleTest()` is called before `RUN_ALL_TESTS()`; otherwise tests won't run.
+- Avoid ignoring the return value of `RUN_ALL_TESTS()`, as it indicates overall success.
+- When defining parameterized or typed tests, make sure instantiations are done to activate them.
+- Use `--gtest_list_tests` to verify which tests are discovered.
+- For flaky tests, use `--gtest_repeat` and `--gtest_shuffle` to detect order dependencies.
 
-Mastering this flow enables you to write efficient, isolated tests and harness GoogleTest's powerful features effectively.
+## Best Practices
 
----
-
-For comprehensive instructions on writing tests and controlling execution, consult these guides:
-
-- [Writing Your First Test](https://github.com/google/googletest/tree/main/docs/guides/getting-started/writing-your-first-test.md)
-- [Organizing and Running Test Suites](https://github.com/google/googletest/tree/main/docs/guides/getting-started/organizing-test-suites.md)
-- [Assertions & Matchers](https://github.com/google/googletest/tree/main/docs/concepts/core-architecture/assertions-matchers.md)
-- [Initialization and Flag Reference](https://github.com/google/googletest/tree/main/docs/api-reference/platform-flags/flags-and-init.md)
-
-For embedding GoogleMock alongside GoogleTest in your mocks, explore the [GoogleMock documentation](https://github.com/google/googletest/blob/main/docs/gmock_for_dummies.md).
-
+- Leverage automatic discovery by writing tests using official macros.
+- Use test suites and fixtures to group related tests and shared setups.
+- Use global environments sparingly to initialize heavy resources.
+- Control test filtering and execution order with command-line flags for iterative development.
+- Extend test execution monitoring via event listeners if needing custom reporting or resource tracking.
 
 ---
 
-**Tip:** Use test filtering (`--gtest_filter`) and parameterized tests to manage complex test architectures efficiently.
+This lifecycle and discovery architecture provides a scalable and user-friendly testing experience. By writing targeted tests and relying on automatic discovery and orchestration, you can focus on testing logic rather than test management.
 
----
+## Related Documentation
+
+- [Writing Your First Test](../getting-started/first-test-and-validation/writing-your-first-test.md) - How to write tests and use macros.
+- [Running Tests](../getting-started/first-test-and-validation/running-tests.md) - Running and controlling test execution.
+- [Global Setup and Tear-Down](../advanced.md#global-set-up-and-tear-down) - Managing environments.
+- [Event Listener API](../advanced.md#extending-google-test-by-handling-test-events) - For custom test progress handling.
+- [Parameterized and Typed Tests](../concepts/advanced-testing-patterns/parameterized-tests.md) - Advanced test definition and instantiation.
+- [Feature Overview and System Architecture](../overview/architecture-features-integration/architecture-diagram.md) - Visual and conceptual overview.
+
 
 
