--- a/concepts/core-architecture/assertions-failures.mdx
+++ b/concepts/core-architecture/assertions-failures.mdx
@@ -1,251 +1,235 @@
 ---
-title: "Assertions and Failure Handling"
-description: "Understand GoogleTest's wide-ranging assertion mechanisms, from basic checks to user-defined conditions. Examine how failures are reported, classified as fatal or non-fatal, and integrated into the test flow. Grasp how these mechanisms promote clarity in test results and flexible error handling."
+title: "Assertions and Failure Modes"
+description: "Details the assertion types in GoogleTest—including fatal, non-fatal, user-defined, and predicate assertions. Explains how assertion results are reported and how failure handling enables precise diagnostics and test continuation."
 ---
 
-# Assertions and Failure Handling
+# Assertions and Failure Modes
 
-Understanding the assertion mechanisms of GoogleTest is fundamental to writing effective unit tests that clearly express intent and diagnose failures efficiently. This guide unpacks the diverse set of assertion macros available, explains the difference between fatal and non-fatal failures, and illustrates how GoogleTest integrates these mechanisms into the overall test flow to provide transparent and actionable results.
-
----
-
-## Table of Contents
-
-- [Introduction to Assertions](#introduction-to-assertions)
-- [Explicit Success and Failure Assertions](#explicit-success-and-failure-assertions)
-- [Boolean Condition Assertions](#boolean-condition-assertions)
-- [Binary Comparison Assertions](#binary-comparison-assertions)
-- [String Comparison Assertions](#string-comparison-assertions)
-- [Floating-Point Comparison Assertions](#floating-point-comparison-assertions)
-- [Exception Assertions](#exception-assertions)
-- [Predicate Assertions](#predicate-assertions)
-- [Windows HRESULT Assertions](#windows-hresult-assertions)
-- [Death Assertions](#death-assertions)
-- [Assertion Streaming and Custom Messages](#assertion-streaming-and-custom-messages)
-- [Best Practices and Troubleshooting](#best-practices-and-troubleshooting)
+Understanding assertions in GoogleTest is essential to producing effective and reliable unit tests. This guide details the different types of assertions provided by GoogleTest, how their results are reported, and how failure handling capabilities allow precise diagnostics and control of test flow.
 
 ---
 
-## Introduction to Assertions
+## Types of Assertions in GoogleTest
 
-At the heart of GoogleTest's verification capabilities are **assertion macros** which confirm that the tested code behaves as expected. Including `<gtest/gtest.h>` activates access to these macros. Assertions can be broadly categorized based on their effect on test execution:
+GoogleTest offers a rich set of assertion macros that can generate success, non-fatal failures, or fatal failures. This differentiated behavior empowers you to control how tests continue or stop upon assertion outcomes.
 
-- **Non-fatal failures** (indicated by `EXPECT_` macros) allow the test function to continue running,
-- **Fatal failures** (indicated by `ASSERT_` macros) immediately abort the current function.
+### 1. Fatal Assertions
 
-Users can also append custom failure messages to any assertion using the `<<` streaming operator to provide context-sensitive diagnostics.
+- **Purpose:** Immediately halt the current function when the assertion fails.
+- **Macros:** Begin with `ASSERT_`, e.g., `ASSERT_TRUE(condition)`, `ASSERT_EQ(val1, val2)`.
+- **Behavior:** Upon failure, control returns from the current test function, preventing subsequent lines from executing within that function.
+
+### 2. Non-fatal Assertions
+
+- **Purpose:** Report failures, but allow the current function to continue executing.
+- **Macros:** Begin with `EXPECT_`, e.g., `EXPECT_TRUE(condition)`, `EXPECT_EQ(val1, val2)`.
+- **Behavior:** Failures are registered but testing proceeds within the current function, allowing multiple issues to be detected before the test ends.
+
+### 3. Explicit Success and Failure
+
+- Use `SUCCEED()` to explicitly generate a success (typically documentary).
+- Use `FAIL()` or `ADD_FAILURE()` to generate fatal or non-fatal failures respectively without any condition.
+
+### 4. Predicate Assertions
+
+For complex checks not covered by built-in macros, GoogleTest provides predicate assertions that express conditions with clearer failure messages.
+
+- **Boolean Predicate Assertions:** `EXPECT_PRED1`, `EXPECT_PRED2`, ..., `ASSERT_PRED1`, etc., which accept functions or functors returning `bool`.
+- **Predicate Formatter Assertions:** `EXPECT_PRED_FORMATN`, which use functions returning `AssertionResult` allowing richer failure diagnostics including expression strings and custom messages.
+
+### 5. String and C-String Assertions
+
+GoogleTest distinguishes between pointers and actual C-string content in equality checks:
+
+- Use `EXPECT_STREQ()` and `EXPECT_STRNE()` for comparing C string content.
+- Wide strings (`wchar_t*`) are also supported, with failure messages converted to UTF-8.
+
+### 6. Floating-Point Comparisons
+
+Specialized macros like `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, and `EXPECT_NEAR` accommodate floating-point rounding imprecision and provide ULP-based comparisons.
+
+### 7. Exception Assertions
+
+These macros test if statements throw or don’t throw exceptions:
+
+- `EXPECT_THROW`, `ASSERT_THROW` verify that a statement throws an expected exception.
+- `EXPECT_NO_THROW`, `ASSERT_NO_THROW` verify that a statement does not throw.
+- `EXPECT_ANY_THROW`, `ASSERT_ANY_THROW` verify that a statement throws an exception of any type.
+
+### 8. Death Assertions
+
+Death tests check that code causes the program to exit or terminate under specific conditions. See the Death Tests guide for details on macros like `EXPECT_DEATH`.
 
 ---
 
-## Explicit Success and Failure Assertions
+## How Assertion Results Are Reported
 
-Sometimes, test flow decisions cannot rely solely on boolean expressions but instead on control path outcomes. GoogleTest offers explicit macros to signal success or failure directly.
+When tests run, assertions yield results encapsulated in **TestPartResult** objects categorized as:
 
-### `SUCCEED()`
+- **Success:** The assertion passed.
+- **Non-Fatal Failure:** The assertion failed but execution continues.
+- **Fatal Failure:** The assertion failed and current function execution stops immediately.
+- **Skip:** The test or assertion was skipped.
 
-- Records a successful check. Does **not** mean the entire test passes by itself, but documents a pass point.
-- Currently, it produces no visible output but may in future versions.
+GoogleTest captures these results, attaches diagnostic messages, and may include stack traces unless the assertion is a success or a skip.
 
-### `FAIL()`
+Failure messages printed to the console are clear and include:
 
-- Generates a **fatal failure**, immediately aborts the current `void`-returning function.
-- Use this to mark unreachable code or explicit failure points.
+- File and line number where the failure occurred.
+- The actual and expected values or conditions.
+- Additional user-supplied messages if provided with streaming (`<<`) syntax.
 
-### `ADD_FAILURE()` and `ADD_FAILURE_AT(file, line)`
+For example, a failing equality check will print the expressions and their evaluated values:
 
-- Issues a non-fatal failure allowing continued execution.
-- `ADD_FAILURE_AT` specifies file and line number for precise failure location.
+```none
+Expected equality of these values:
+  foo
+    Which is: 5
+  bar
+    Which is: 6
+```
 
-**Example:**
+When assertions fail, GoogleTest considers the test as failed but continues running other tests unless a **fatal failure** or the `fail_fast` flag is set.
+
+---
+
+## Failure Handling and Test Flow Control
+
+GoogleTest provides flexible control over test execution in the presence of assertion failures:
+
+### 1. Propagation of Fatal Failures
+
+Fatal assertions only abort the current function, not the entire test case or program. To handle this:
+
+- Use `HasFatalFailure()` to detect a fatal failure state and return early.
+- Use `ASSERT_NO_FATAL_FAILURE()` macro to ensure a statement generates no fatal failures.
+- Alternatively, enable exceptions by adding a listener that throws on fatal failures, transforming `ASSERT_*` failures into exceptions that can unwind the call stack.
+
+### 2. Skipping Tests
+
+- The macro `GTEST_SKIP()` can be used to skip tests at runtime with an optional streamed message.
+- It aborts the current function but does not mark the test as failed.
+
+### 3. Flags Influencing Failure Behavior
+
+- **`--gtest_fail_fast`** (or `fail_fast` flag) causes the test runner to stop after the first failure across any test.
+- **`--gtest_break_on_failure`** triggers a debugger breakpoint on assertion failures, useful for interactive debugging.
+- **`--gtest_throw_on_failure`** throws exceptions on failures if exceptions are enabled, allowing better integration with external frameworks.
+
+They can be set via environment variables or command-line flags.
+
+---
+
+## Practical Usage Examples
+
+### Fatal versus Non-Fatal:
 
 ```cpp
-switch(expression) {
-  case 1:
-    ... some checks ...
-    break;
-  case 2:
-    ... some other checks ...
-    break;
-  default:
-    FAIL() << "Reached impossible default case.";
+TEST(MyTestSuite, Example) {
+  EXPECT_EQ(1, Foo());  // Fails but continues
+  ASSERT_EQ(2, Bar());  // Fails and returns from this test function
+  // The code below runs only if ASSERT_EQ passes
+  Baz();
 }
 ```
 
----
-
-## Boolean Condition Assertions
-
-These assertions directly test boolean conditions.
-
-### `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`
-
-- Succeeds if `condition` evaluates to `true`.
-
-### `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`
-
-- Succeeds if `condition` evaluates to `false`.
-
-These are foundational checks for expressing expected state or predicate evaluations.
-
----
-
-## Binary Comparison Assertions
-
-Used for verifying relationships between two values, these macros require arguments to support the relevant comparison operators. They include but are not limited to:
-
-- Equality: `EXPECT_EQ(val1, val2)`, `ASSERT_EQ(val1, val2)`
-- Inequality: `EXPECT_NE(val1, val2)`, `ASSERT_NE(val1, val2)`
-- Less than: `EXPECT_LT(val1, val2)`, `ASSERT_LT(val1, val2)`
-- Less or equal: `EXPECT_LE(val1, val2)`, `ASSERT_LE(val1, val2)`
-- Greater than: `EXPECT_GT(val1, val2)`, `ASSERT_GT(val1, val2)`
-- Greater or equal: `EXPECT_GE(val1, val2)`, `ASSERT_GE(val1, val2)`
-
-**Important nuances:**
-
-- For pointers, `EXPECT_EQ` compares **pointer identity**, not pointed-to values.
-- Use `EXPECT_STREQ` for C-string content comparison instead of `EXPECT_EQ`.
-- Arguments are evaluated exactly once, though order is undefined - avoid side effects relying on order.
-
-**Example:**
+### Using HasFatalFailure to Early-Exit:
 
 ```cpp
-EXPECT_EQ(my_result, expected_result) << "Calculation mismatch.";
+void Helper() {
+  ASSERT_TRUE(CheckCondition());
+  // ... more code ...
+}
+
+TEST(MyTestSuite, EarlyExitExample) {
+  Helper();
+  if (HasFatalFailure()) return;  // Early exit if Helper failed
+  EXPECT_TRUE(AnotherCheck());
+}
+```
+
+### Skipping a Test at Runtime:
+
+```cpp
+TEST(MyTest, NeedsNetwork) {
+  if (!NetworkAvailable()) {
+    GTEST_SKIP() << "Network not available, skipping.";
+  }
+  // test body
+}
+```
+
+### Using Predicate Assertion for Better Messages:
+
+```cpp
+AssertionResult IsEven(int n) {
+  if (n % 2 == 0)
+    return AssertionSuccess() << n << " is even";
+  else
+    return AssertionFailure() << n << " is odd";
+}
+
+TEST(ExampleTest, PredicateAssertion) {
+  EXPECT_PRED_FORMAT1(IsEven, 3);
+}
+```
+
+On failure, the message will contain detailed diagnostics:
+
+```none
+Value of: IsEven(3)
+  Actual: false (3 is odd)
+Expected: true
 ```
 
 ---
 
-## String Comparison Assertions
+## Common Pitfalls and Best Practices
 
-GoogleTest distinguishes between C-string pointer assertions and STL/string objects.
-
-### For C strings (including wide strings):
-
-- `EXPECT_STREQ(str1, str2)`, `ASSERT_STREQ(str1, str2)` — content equality.
-- `EXPECT_STRNE(str1, str2)`, `ASSERT_STRNE(str1, str2)` — content inequality.
-- `EXPECT_STRCASEEQ(str1, str2)`, `ASSERT_STRCASEEQ(str1, str2)` — case-insensitive equality.
-- `EXPECT_STRCASENE(str1, str2)`, `ASSERT_STRCASENE(str1, str2)` — case-insensitive inequality.
-
-Use these macros when testing null-terminated string content explicitly. For `std::string`, fall back to `EXPECT_EQ`.
+- **Understand Fail Behavior:** Fatal failures abort only the current function. Use `HasFatalFailure()` or exceptions to propagate failures properly.
+- **Stream Messages:** Always leverage `<<` streaming to add clear context to your assertions.
+- **Avoid Assertions in Non-void Functions:** Fatal assertion macros (`ASSERT_`, `FAIL()`) should only be used in `void` functions.
+- **Use Skipping Wisely:** Use `GTEST_SKIP()` to mark tests as skipped when preconditions are unmet without failing the test.
+- **Separate Fatal and Non-Fatal Use Cases:** Use `EXPECT_` when you want tests to continue execution to detect multiple failures.
+- **Use Predicate and Predicate-Formatter Macros:** For complex conditions, use predicate assertions to create clearer failure messages.
 
 ---
 
-## Floating-Point Comparison Assertions
+## How Assertions Integrate in GoogleTest Architecture
 
-Due to rounding and representation limits, exact floating-point equality is rarely meaningful. GoogleTest provides:
+Assertions tie into GoogleTest in the following way:
 
-- `EXPECT_FLOAT_EQ(val1, val2)`, `ASSERT_FLOAT_EQ(val1, val2)` — compares `float` values within 4 ULPs.
-- `EXPECT_DOUBLE_EQ(val1, val2)`, `ASSERT_DOUBLE_EQ(val1, val2)` — compares `double` values within 4 ULPs.
-- `EXPECT_NEAR(val1, val2, abs_error)`, `ASSERT_NEAR(val1, val2, abs_error)` — asserts absolute difference within `abs_error`.
+1. When an assertion is invoked, it calls `UnitTest::AddTestPartResult()` with the result type and message.
 
-**Use case:**
+2. Failure details (file, line, message, stack trace) are captured and stored in `TestPartResult` objects.
 
-```cpp
-EXPECT_NEAR(computed_value, expected_value, 0.001);
-```
+3. `TestResult` objects aggregate all `TestPartResult` instances for a given test.
 
-For advanced floating-point checks, predicate-format assertions enable fine-grained message control.
+4. Event listeners like the default result printer pick up failure events and print formatted diagnostics.
 
----
+5. Flags like `fail_fast` and `break_on_failure` influence whether execution continues or breaks.
 
-## Exception Assertions
-
-When exceptions are enabled, GoogleTest lets you verify whether a statement throws or doesn’t throw exceptions.
-
-- `EXPECT_THROW(statement, exception_type)`, `ASSERT_THROW(statement, exception_type)` — statement should throw specified exception.
-- `EXPECT_ANY_THROW(statement)`, `ASSERT_ANY_THROW(statement)` — statement should throw any exception.
-- `EXPECT_NO_THROW(statement)`, `ASSERT_NO_THROW(statement)` — statement should not throw.
-
-Supports compound statements with braces. Exception assertions help test error propagation and robustness.
+This design allows the GoogleTest framework to provide flexible and rich diagnostics that help developers quickly locate issues.
 
 ---
 
-## Predicate Assertions
+## Troubleshooting Assertion Failures
 
-For complex predicates or custom boolean checks, predicate assertions enhance failure diagnostics by printing argument values:
-
-- `EXPECT_PRED1(pred, val1)` through `EXPECT_PRED5(pred, val1, ..., val5)`
-- `ASSERT_PRED1(...)` through `ASSERT_PRED5(...)`
-
-Their counterparts with formatters (`EXPECT_PRED_FORMAT*` and `ASSERT_PRED_FORMAT*`) offer full control over failure message formatting.
-
-**Example:**
-
-```cpp
-bool IsEven(int n) { return (n % 2) == 0; }
-EXPECT_PRED1(IsEven, 4);  // Passes
-EXPECT_PRED1(IsEven, 3);  // Fails with detailed message.
-```
+- If you encounter unexpected continuation after `ASSERT_*` failures, verify your test functions return `void`.
+- Use `HasFatalFailure()` to detect and handle fatal failure states where needed.
+- Check test filter settings; some failures may be skipped due to filtering or sharding.
+- Use `SCOPED_TRACE` to add contextual information to help diagnose failures in nested calls.
 
 ---
 
-## Windows HRESULT Assertions
+## Additional Resources
 
-On Windows, APIs often return `HRESULT` codes. GoogleTest provides:
-
-- `EXPECT_HRESULT_SUCCEEDED(expression)`, `ASSERT_HRESULT_SUCCEEDED(expression)`
-  - Verifies success codes.
-- `EXPECT_HRESULT_FAILED(expression)`, `ASSERT_HRESULT_FAILED(expression)`
-  - Verifies failure codes.
-
-Failures emit human-readable error messages to aid diagnosis.
+- [Assertions Reference](https://github.com/google/googletest/blob/main/docs/reference/assertions.md)
+- [Advanced Guide on Assertions](https://github.com/google/googletest/blob/main/docs/advanced.md#more-assertions)
+- [Death Tests Guide](https://github.com/google/googletest/blob/main/guides/real-world-workflows/death-tests.md)
+- [Event Listener API](https://github.com/google/googletest/blob/main/docs/advanced.md#extending-google-test-by-handling-test-events)
+- [Test Discovery and Execution Lifecycle](https://github.com/google/googletest/blob/main/concepts/core-architecture/test-discovery-lifecycle.md)
 
 ---
 
-## Death Assertions
-
-Death tests verify the process terminates as expected. GoogleTest offers:
-
-- `EXPECT_DEATH(statement, matcher)`, `ASSERT_DEATH(statement, matcher)` — statement must cause process death with stderr output matching `matcher`.
-- `EXPECT_DEATH_IF_SUPPORTED(...)`, `ASSERT_DEATH_IF_SUPPORTED(...)` — conditionally run death tests.
-- `EXPECT_DEBUG_DEATH(...)`, `ASSERT_DEBUG_DEATH(...)` — death test active only in debug builds.
-- `EXPECT_EXIT(statement, predicate, matcher)`, `ASSERT_EXIT(...)` — verify specific exit status and output.
-
-**Note:** Death tests create separate child processes to isolate fatal behavior safely.
-
-**Example Death Test:**
-
-```cpp
-ASSERT_DEATH({ DoDangerousStuff(); }, "Error on line .* of DoDangerousStuff");
-```
-
----
-
-## Assertion Streaming and Custom Messages
-
-All assertion macros support streaming custom error messages for clearer context.
-
-**Example:**
-
-```cpp
-EXPECT_TRUE(success) << "Operation failed with error code " << error_code;
-```
-
-Wide strings and custom types streamed to assertions are converted to UTF-8 or printed according to custom printers.
-
----
-
-## Best Practices and Troubleshooting
-
-- Use `EXPECT_` macros when you want tests to continue after failure, and `ASSERT_` when further execution would be useless or dangerous.
-- Supply clear, concise custom messages to clarify failures.
-- Avoid over-specifying tests; test *contracts*, not every internal call or state.
-- When debugging unexpected failures, enable verbose logging with `--gmock_verbose=info` to trace matcher evaluations and call matching.
-- Use `ON_CALL` to set default mock behaviors without setting call expectations, preserving test flexibility.
-- Apply `EXPECT_CALL` only when verifying that specific calls must happen.
-- Handle floating-point comparisons with provided macros to avoid false negatives due to rounding.
-
----
-
-Refer to the [Matchers Reference](matchers.md) and [gMock Cookbook](gmock_cook_book.md) for extending assertions via matchers and custom predicates.
-
----
-
-## Related Topics
-
-- [Writing and Using Assertions](../guides/core-testing-workflows/writing-assertions.md)
-- [Using Matchers for Argument Verification](../guides/mocking-best-practices/using-matchers.md)
-- [Setting Expectations and Default Actions](../api-reference/core-mocking-apis/call-expectations.md)
-
----
-
-This document offers a thorough understanding of GoogleTest's assertion landscape, guiding users from fundamental checks to sophisticated control over test verification and failure reporting. Mastery of these concepts empowers developers to write clear, maintainable, and robust unit tests.
+Understanding how GoogleTest assertions work and how their failures influence test flow is crucial for writing robust tests and diagnosing issues efficiently. This guide equips you to use assertions effectively in your GoogleTest-based test suites.
