--- a/faq/getting-started-faq/supported-platforms.mdx
+++ b/faq/getting-started-faq/supported-platforms.mdx
@@ -1,146 +1,178 @@
 ---
-title: "Which platforms and toolchains are supported?"
-description: "Summarizes the currently supported compilers, platforms, and toolchains, helping users plan integrations and avoid compatibility pitfalls. Includes support and maintenance policy links."
+title: "Which Platforms and Compilers are Supported?"
+description: "Clarifies which operating systems, compilers, and development environments are officially supported by GoogleTest. Addresses common questions on compatibility and points to guidance for less typical setups."
 ---
 
-# Which platforms and toolchains are supported?
+# Which Platforms and Compilers are Supported?
 
-This page provides a clear overview of the currently supported compilers, platforms, and toolchains for GoogleTest. It helps you plan your development and integration environment, avoid common compatibility pitfalls, and understand the maintenance and support policy related to platform coverage.
-
----
-
-## Supported Platforms Overview
-
-GoogleTest supports a wide range of platforms following Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support). This ensures that the testing framework remains stable and compatible with the most relevant OS and compiler environments used across the industry.
-
-For a detailed and up-to-date list of supported versions of compilers, platforms, and build tools, please refer to the [Foundational C++ Support Matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md).
+GoogleTest is designed to be highly portable and supports a wide range of platforms, compilers, and development environments. This page clarifies exactly which operating systems and toolchains are officially supported and offers guidance on compatibility, including common questions regarding less typical or embedded setups.
 
 ---
 
-## Platform Detection and Environment Support
+## Official Supported Platforms
 
-GoogleTest automatically detects the platform it is being compiled on using internal macros. These macros inform the framework about platform-specific features and limitations to ensure compatibility. Supported platforms include mainstream systems such as Windows (with several subvariants), Linux, macOS, as well as flavors like FreeBSD, OpenBSD, NetBSD, Android, iOS, and more specialized or embedded platforms.
+GoogleTest follows Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support), ensuring that it works reliably on modern and widely used systems. Refer to [this matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md) for an up-to-date list of supported platforms, compilers, and build tools.
 
-### Examples of Supported Platforms Macros
+Key supported platforms include:
 
-- `GTEST_OS_WINDOWS` with subcategories like:
-  - `GTEST_OS_WINDOWS_DESKTOP`
-  - `GTEST_OS_WINDOWS_MINGW`
-  - `GTEST_OS_WINDOWS_MOBILE`
-- `GTEST_OS_LINUX` and `GTEST_OS_LINUX_ANDROID`
-- `GTEST_OS_MAC` and `GTEST_OS_IOS`
-- BSD variants such as `GTEST_OS_FREEBSD`, `GTEST_OS_OPENBSD`, `GTEST_OS_NETBSD`
-- Others including `GTEST_OS_QNX`, `GTEST_OS_FUCHSIA`, `GTEST_OS_SOLARIS`
+- **Linux** (including typical distributions and Android variants)
+- **Windows** (including Desktop and MinGW environments)
+- **macOS and iOS**
+- Popular BSD variants (FreeBSD, OpenBSD, NetBSD, DragonFlyBSD)
 
-These platform macros govern conditional compilation and platform-specific implementation details to maintain consistent behavior.
+In addition to these, GoogleTest has varying levels of support for other systems such as AIX, Solaris, Fuchsia, Haiku, QNX, and z/OS. These may have less stable or community-driven maintenance.
 
----
+## Supported Compilers
 
-## Compiler and Language Standard Requirements
+GoogleTest requires a C++ environment supporting at least the C++17 standard.
 
-GoogleTest requires an environment with support for **C++17** or later. Ensure your compiler supports C++17, for example by setting appropriate flags such as `-std=c++17` with GCC or Clang, or enabling the equivalent in your build system.
+Primary supported compilers are:
 
-Notably:
+- **GCC** (support begins effectively from version 7 upwards, depending on C++17 feature support)
+- **Clang** (modern Clang releases fully supported)
+- **MSVC** (Microsoft Visual Studio 2017 Update 3 or later with C++17 enabled)
 
-- The build system verifies minimum compiler versions and enforces C++17 standard compliance.
-- If using CMake, set `CMAKE_CXX_STANDARD` to 17 and `CMAKE_CXX_STANDARD_REQUIRED` to ON.
+To successfully build GoogleTest, you must ensure your build environment selects C++17 or later standards. For example, with CMake, use:
 
-### Supported Build Systems
-
-- GoogleTest officially supports builds through **CMake** and **Bazel**.
-- Community support exists for other build systems.
-- The [googletest/README.md](https://github.com/google/googletest/blob/main/README.md) and [CMakeLists.txt](https://github.com/google/googletest/blob/main/CMakeLists.txt) provide build instructions, including handling shared libraries and multi-threaded testing.
-
----
-
-## Toolchain and Build Flags
-
-### Multi-threading Support
-
-GoogleTest is thread-safe on platforms where the pthread library is available. If pthread detection fails, you can manually specify this using:
-
-```bash
--DGTEST_HAS_PTHREAD=1
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 ```
 
-or disable it with:
+If your project cannot set the standard globally, pass appropriate compiler flags such as `-std=c++17` or equivalent.
+
+## Threading and Synchronization Support
+
+GoogleTest is fully thread-safe when compiled and run on systems with thread support, primarily via the pthread library on Unix-like platforms or native Windows threading APIs.
+
+By default, GoogleTest auto-detects the availability of pthreads. If detection fails, you can explicitly control this via the compile-time macro:
 
 ```bash
--DGTEST_HAS_PTHREAD=0
+-DGTEST_HAS_PTHREAD=1  # Enable pthread support
+-DGTEST_HAS_PTHREAD=0  # Disable pthread support
 ```
 
-Using CMake typically handles this for you.
+Note: When pthread support is enabled, you must add the appropriate pthread flags to your compiler and linker. For example, with gcc/clang, link with `-pthread`.
 
-### Shared Library (DLL) Support
+Microsoft Windows uses native threading mechanisms internally.
 
-You can compile GoogleTest as a shared library (DLL) with:
+## Compiler Macros for Portability
 
-```bash
--DGTEST_CREATE_SHARED_LIBRARY=1
-```
+GoogleTest defines a variety of macros internally to detect and adapt to environments and platform specifics:
 
-When linking tests against the shared library, use:
+- `GTEST_OS_WINDOWS`, `GTEST_OS_LINUX`, `GTEST_OS_MAC` and similar macros indicate platform.
+- `GTEST_HAS_EXCEPTIONS` to detect exception support.
+- `GTEST_HAS_RTTI` to detect run-time type information (RTTI) availability.
+- `GTEST_HAS_STD_WSTRING` to check if `std::wstring` is supported.
+- `GTEST_HAS_FILE_SYSTEM` to know if filesystem operations are allowed.
 
-```bash
--DGTEST_LINKED_AS_SHARED_LIBRARY=1
-```
+Usually, these macros do not require manual user intervention as GoogleTest automatically detects them during compilation.
 
-This ensures runtime compatibility and future-proofing against changes in compiler behavior regarding symbol visibility.
+## Platform Considerations and Caveats
 
-### Runtime Library Compatibility on Windows
+- **Windows**:
+  - GoogleTest builds with MSVC 2017 Update 3 or newer.
+  - When linking with Visual Studio projects, be aware of runtime library mismatches. Use the `gtest_force_shared_crt` CMake option to control static vs dynamic linking of the C runtime.
 
-Visual Studio projects by default link the C runtime dynamically whereas GoogleTest statically links it. Use the CMake option:
+- **Linux/Unix**:
+  - GoogleTest depends on POSIX APIs and pthread.
+  - On Android, GoogleTest is supported starting with NDK API level 9 or above.
 
-```bash
--Dgtest_force_shared_crt=ON
-```
+- **macOS/iOS**:
+  - Supported on Mac OS X and iOS with full compatibility.
 
-to harmonize the runtime linkage and avoid linker errors.
+- **Embedded Platforms**:
+  - Support varies; examples like ESP32 and NRF52 are supported with platform-specific integration.
+  - Some embedded OSes or systems with limited standard library support may require customizing GoogleTest or disabling unsupported features.
+
+## Building GoogleTest on Supported Platforms
+
+GoogleTest supports common build systems such as CMake and Bazel:
+
+- Use the provided `CMakeLists.txt` and pass the proper platform-specific flags.
+- Bazel rules detect platforms via constraint settings and configure build options such as linking libraries and compiler settings accordingly.
+
+Refer to the [Quickstart with CMake](../guides/getting-started/quickstart-cmake.md) and [Quickstart with Bazel](../guides/getting-started/quickstart-bazel.md) guides for detailed build instructions tailored to various platforms.
+
+## What If Your Platform or Compiler Is Not Officially Supported?
+
+GoogleTest tries to be flexible, but if your platform or compiler is not in the official support matrix:
+
+- You may try building GoogleTest manually and assess which features work or fail.
+- Define or override GoogleTest control macros in your build to disable unsupported features.
+- Report issues to the community or contribute patches.
+- Consider submitting an email to `googletestframework@googlegroups.com` for support or collaboration.
+
+## Related Resources
+
+- [Supported Platforms Matrix (GitHub)](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
+- [GoogleTest Official README](https://github.com/google/googletest/blob/main/googletest/README.md#generic-build-instructions)
+- [CMake Build Instructions](../guides/getting-started/quickstart-cmake.md)
+- [Bazel Build Instructions](../guides/getting-started/quickstart-bazel.md)
+- Platform-specific macros and configuration details in [`gtest-port.h`](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h)
 
 ---
 
-## Support and Maintenance Policy
+## Troubleshooting Platform and Compiler Issues
 
-GoogleTest's platform support aligns with the foundational C++ support policy defined by Google, focusing on:
+- **Common Problem**: Build failure due to missing C++17 support.
+  - Verify that your compiler supports C++17 and you set the flag properly.
 
-- Maintaining compatibility across widely used OSes and compiler versions.
-- Periodic updates to support new platforms and versions.
-- Deprecation announcements well in advance for platforms falling out of support.
+- **Threading errors or race conditions**:
+  - Make sure to enable pthread support where applicable.
+  - Link with pthread (`-pthread` or equivalent).
 
-For the authoritative, regularly updated information on support status and platform matrices, always refer to:
+- **Runtime library mismatch on Windows**:
+  - Use `gtest_force_shared_crt` to match your project's settings.
 
-- [Google's Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support)
-- [Supported compiler/platform matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
-
----
-
-## Troubleshooting Common Compatibility Issues
-
-- **Build failures due to C++ standard version:** Confirm your compiler supports C++17 or above.
-- **Linker errors on Windows:** Check the runtime library linkage and use `gtest_force_shared_crt` as needed.
-- **Missing pthread errors on Unix-like systems:** Explicitly enable or disable pthread support.
-- **Platform-specific feature macros not detected:** Consider manually defining relevant macros following your platform's peculiarities.
-
-Always validate your toolchain environment against the supported matrix before raising issues.
-
----
-
-## Related Links and Resources
-
-- [Supported Platforms and Compatibility - Official Documentation](https://github.com/google/googletest/blob/main/docs/platforms.md)
-- [GoogleTest Installation and Build Options](https://your-doc-url/getting_started/intro_and_setup/installation_options)
-- [Quickstart with CMake](https://your-doc-url/getting_started/intro_and_setup/installation_options#build-with-cmake)
-- [GoogleTest GitHub Repository](https://github.com/google/googletest)
-
+- **Unsupported macros or undefined platform settings**:
+  - Check that your build system defines relevant macros or upgrade your environment.
 
 <Tip>
-Always consult the official support matrix link before integrating GoogleTest into new or unusual environments to ensure compatibility.
+When building in unusual or embedded environments, carefully review `gtest-port.h` for macros you may need to define to disable unsupported features such as exceptions, RTTI, or threading.
 </Tip>
 
 ---
 
-This page fits within the documentation under the "Getting Started & General FAQ" section, complementing setup, installation, and compatibility information, enabling you to plan your environment effectively.
+## Summary
+
+GoogleTest’s extensive platform support ensures you can use it on virtually all mainstream developer environments. Its adaptability to different compilers and operating systems, combined with flexible build configurations, makes GoogleTest a robust and reliable choice for C++ testing.
+
+If you encounter platform-specific difficulties, verify platform/compiler support, adjust feature macros, and consult the build guides for assistance.
+
+<br>
 
 ---
 
-*End of Supported Platforms and Toolchains Documentation.*
+<AccordionGroup title="In-Depth Platform Support Details and Macros">
+<Accordion title="Platform Identification Macros">
+GoogleTest automatically defines macros like `GTEST_OS_WINDOWS`, `GTEST_OS_LINUX`, `GTEST_OS_MAC`, and others corresponding to your compilation platform. These enable platform-specific code paths optimized for your environment without user intervention.
+
+These macros are always defined to 1 on the detected platform; if your environment is not detected, none may be defined.
+</Accordion>
+<Accordion title="Feature Availability Macros">
+GoogleTest macros such as `GTEST_HAS_EXCEPTIONS`, `GTEST_HAS_RTTI`, and `GTEST_HAS_PTHREAD` indicate availability of key language and library features. You can override these as needed if automatic detection is incorrect for your environment.
+
+For example, to disable exceptions in a build that does not support them:
+
+```bash
+-DGTEST_HAS_EXCEPTIONS=0
+```
+</Accordion>
+<Accordion title="Compiler Version and C++ Standard Checks">
+Support requires at least C++17. For example, building with MSVC requires version 19.11 or higher (Visual Studio 2017 Update 3+).
+
+Trying to build with older standards or compilers will result in compilation errors.
+
+You can configure your build system to specify the C++ version explicitly, for example:
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+```
+</Accordion>
+<Accordion title="Supported Build Systems and Flags">
+Both CMake and Bazel systems support platform detection and appropriate build flags out-of-the-box.
+
+Use the provided options or macros to enable features like shared libraries (`-DGTEST_CREATE_SHARED_LIBRARY=1`), pthread support, and override default settings.
+</Accordion>
+</AccordionGroup>
